        * updated META.yml, MANIFEST
        * added some docs
        
        2010-03-02
        * added test for mixedCase and combined_name attribute keys
        * fixed doc typos, expanded docs
        * added logic to expand and shrink class names instead of setting them
          class 'abc';  # sets a class name, is now: 'abc'
          class '+xxx'; # adds class names,  is now: 'abc xyz'
          class '-xxx'; # removes things,    is now: 'abc'
          class 'uuu';  # set a name         is now: 'uuu'
          class '+a selected'                is now: 'a selected uuu'
          class '-a' 'uuu'                   is now: 'selected'
          class '-selected +hui foo'         is now: 'foo hui'
        
0.05    2010-02-23
        * fixed a bug that made certain multiline prototype-like attributes fail
        * added a test to verify that
        * allow to use special attribute-names like
          div(dataTarget => 'x')       becomes <div data-target="x">
          div(data_target => 'x')      becomes <div data-target="x">
          div(style => {zIndex => 9})  becomes <div style="z-index:9">

        2010-03-01
        * found a way to correctly export and Devel::Declare'able
          all defined block()s into importing namespaces
          the mechanics behind this is dark magic overwriting import()

0.04    2009-08-12
        * started rewriting the markup engine using Moose
        * defining main sub with template {...}; now
        * allow creation of blocks like block some_name => {...};
        * block_content() sub for renderung block's coderef
        * attr() is getter and setter now
        * tests for most modules

0.03    2009-07-18
        * expanded markup syntax by using some Devel::Declare tricks
        * corrected dependencies in Build.PL

0.02    2009-04-26
        added C::Helper::View::ByCode to allow create-script to work.

0.01    2009-04-25
        First version, released on an unsuspecting world.
