@@ -98,6 +98,11 @@ sub import {
         tie *{"$calling_package\::OUT"}, $module, 1; # escaped:   OUT
         tie *{"$calling_package\::RAW"}, $module, 0; # unescaped: RAW
         tie *{"$calling_package\::STDOUT"}, $module, 1; # escaped: STDOUT
+
+        # stupid hack to make -w happy ;-)
+        my $dummy0 = *{"$calling_package\::OUT"};
+        my $dummy1 = *{"$calling_package\::RAW"};
+        my $dummy2 = *{"$calling_package\::STDOUT"};
     }
 }
 
